z.output
Grammar

    0 $accept: zoneshow $end

    1 zoneshow: defx effx
    2         | DEFINED NODEFINED EFFECTIVE NOEFFECTIVE

    3 defx: DEFINED cfgs zones aliass

    4 effx: EFFECTIVE CFG NAME ezones

    5 cfgs: cfgs cfg
    6     | /* empty */

    7 cfg: CFG NAME zns

    8 zns: zns ';' NAME
    9    | NAME

   10 zones: zones zone
   11      | /* empty */

   12 zone: ZONE NAME ans

   13 ans: ans ';' an
   14    | an
   15    | /* empty */

   16 an: NAME
   17   | PORT
   18   | WWPN

   19 aliass: aliass alias
   20       | /* empty */

   21 alias: ALIAS NAME aps

   22 aps: aps ';' ap
   23    | ap
   24    | /* empty */

   25 ap: PORT
   26   | WWPN

   27 ezones: ezones ezone
   28       | /* empty */

   29 ezone: ZONE NAME ports

   30 ports: ports port
   31      | /* empty */

   32 port: PORT
   33     | WWPN


Terminals, with rules where they appear

$end (0) 0
';' (59) 8 13 22
error (256)
EFFECTIVE (258) 2 4
DEFINED (259) 2 3
NODEFINED (260) 2
NOEFFECTIVE (261) 2
CFG (262) 4 7
ZONE (263) 12 29
ALIAS (264) 21
PORT (265) 17 25 32
WWPN (266) 18 26 33
NAME (267) 4 7 8 9 12 16 21 29


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
zoneshow (15)
    on left: 1 2, on right: 0
defx (16)
    on left: 3, on right: 1
effx (17)
    on left: 4, on right: 1
cfgs (18)
    on left: 5 6, on right: 3 5
cfg (19)
    on left: 7, on right: 5
zns (20)
    on left: 8 9, on right: 7 8
zones (21)
    on left: 10 11, on right: 3 10
zone (22)
    on left: 12, on right: 10
ans (23)
    on left: 13 14 15, on right: 12 13
an (24)
    on left: 16 17 18, on right: 13 14
aliass (25)
    on left: 19 20, on right: 3 19
alias (26)
    on left: 21, on right: 19
aps (27)
    on left: 22 23 24, on right: 21 22
ap (28)
    on left: 25 26, on right: 22 23
ezones (29)
    on left: 27 28, on right: 4 27
ezone (30)
    on left: 29, on right: 27
ports (31)
    on left: 30 31, on right: 29 30
port (32)
    on left: 32 33, on right: 30


state 0

    0 $accept: . zoneshow $end

    DEFINED  shift, and go to state 1

    zoneshow  go to state 2
    defx      go to state 3


state 1

    2 zoneshow: DEFINED . NODEFINED EFFECTIVE NOEFFECTIVE
    3 defx: DEFINED . cfgs zones aliass

    NODEFINED  shift, and go to state 4

    $default  reduce using rule 6 (cfgs)

    cfgs  go to state 5


state 2

    0 $accept: zoneshow . $end

    $end  shift, and go to state 6


state 3

    1 zoneshow: defx . effx

    EFFECTIVE  shift, and go to state 7

    effx  go to state 8


state 4

    2 zoneshow: DEFINED NODEFINED . EFFECTIVE NOEFFECTIVE

    EFFECTIVE  shift, and go to state 9


state 5

    3 defx: DEFINED cfgs . zones aliass
    5 cfgs: cfgs . cfg

    CFG  shift, and go to state 10

    $default  reduce using rule 11 (zones)

    cfg    go to state 11
    zones  go to state 12


state 6

    0 $accept: zoneshow $end .

    $default  accept


state 7

    4 effx: EFFECTIVE . CFG NAME ezones

    CFG  shift, and go to state 13


state 8

    1 zoneshow: defx effx .

    $default  reduce using rule 1 (zoneshow)


state 9

    2 zoneshow: DEFINED NODEFINED EFFECTIVE . NOEFFECTIVE

    NOEFFECTIVE  shift, and go to state 14


state 10

    7 cfg: CFG . NAME zns

    NAME  shift, and go to state 15


state 11

    5 cfgs: cfgs cfg .

    $default  reduce using rule 5 (cfgs)


state 12

    3 defx: DEFINED cfgs zones . aliass
   10 zones: zones . zone

    ZONE  shift, and go to state 16

    $default  reduce using rule 20 (aliass)

    zone    go to state 17
    aliass  go to state 18


state 13

    4 effx: EFFECTIVE CFG . NAME ezones

    NAME  shift, and go to state 19


state 14

    2 zoneshow: DEFINED NODEFINED EFFECTIVE NOEFFECTIVE .

    $default  reduce using rule 2 (zoneshow)


state 15

    7 cfg: CFG NAME . zns

    NAME  shift, and go to state 20

    zns  go to state 21


state 16

   12 zone: ZONE . NAME ans

    NAME  shift, and go to state 22


state 17

   10 zones: zones zone .

    $default  reduce using rule 10 (zones)


state 18

    3 defx: DEFINED cfgs zones aliass .
   19 aliass: aliass . alias

    ALIAS  shift, and go to state 23

    $default  reduce using rule 3 (defx)

    alias  go to state 24


state 19

    4 effx: EFFECTIVE CFG NAME . ezones

    $default  reduce using rule 28 (ezones)

    ezones  go to state 25


state 20

    9 zns: NAME .

    $default  reduce using rule 9 (zns)


state 21

    7 cfg: CFG NAME zns .
    8 zns: zns . ';' NAME

    ';'  shift, and go to state 26

    $default  reduce using rule 7 (cfg)


state 22

   12 zone: ZONE NAME . ans

    PORT  shift, and go to state 27
    WWPN  shift, and go to state 28
    NAME  shift, and go to state 29

    $default  reduce using rule 15 (ans)

    ans  go to state 30
    an   go to state 31


state 23

   21 alias: ALIAS . NAME aps

    NAME  shift, and go to state 32


state 24

   19 aliass: aliass alias .

    $default  reduce using rule 19 (aliass)


state 25

    4 effx: EFFECTIVE CFG NAME ezones .
   27 ezones: ezones . ezone

    ZONE  shift, and go to state 33

    $default  reduce using rule 4 (effx)

    ezone  go to state 34


state 26

    8 zns: zns ';' . NAME

    NAME  shift, and go to state 35


state 27

   17 an: PORT .

    $default  reduce using rule 17 (an)


state 28

   18 an: WWPN .

    $default  reduce using rule 18 (an)


state 29

   16 an: NAME .

    $default  reduce using rule 16 (an)


state 30

   12 zone: ZONE NAME ans .
   13 ans: ans . ';' an

    ';'  shift, and go to state 36

    $default  reduce using rule 12 (zone)


state 31

   14 ans: an .

    $default  reduce using rule 14 (ans)


state 32

   21 alias: ALIAS NAME . aps

    PORT  shift, and go to state 37
    WWPN  shift, and go to state 38

    $default  reduce using rule 24 (aps)

    aps  go to state 39
    ap   go to state 40


state 33

   29 ezone: ZONE . NAME ports

    NAME  shift, and go to state 41


state 34

   27 ezones: ezones ezone .

    $default  reduce using rule 27 (ezones)


state 35

    8 zns: zns ';' NAME .

    $default  reduce using rule 8 (zns)


state 36

   13 ans: ans ';' . an

    PORT  shift, and go to state 27
    WWPN  shift, and go to state 28
    NAME  shift, and go to state 29

    an  go to state 42


state 37

   25 ap: PORT .

    $default  reduce using rule 25 (ap)


state 38

   26 ap: WWPN .

    $default  reduce using rule 26 (ap)


state 39

   21 alias: ALIAS NAME aps .
   22 aps: aps . ';' ap

    ';'  shift, and go to state 43

    $default  reduce using rule 21 (alias)


state 40

   23 aps: ap .

    $default  reduce using rule 23 (aps)


state 41

   29 ezone: ZONE NAME . ports

    $default  reduce using rule 31 (ports)

    ports  go to state 44


state 42

   13 ans: ans ';' an .

    $default  reduce using rule 13 (ans)


state 43

   22 aps: aps ';' . ap

    PORT  shift, and go to state 37
    WWPN  shift, and go to state 38

    ap  go to state 45


state 44

   29 ezone: ZONE NAME ports .
   30 ports: ports . port

    PORT  shift, and go to state 46
    WWPN  shift, and go to state 47

    $default  reduce using rule 29 (ezone)

    port  go to state 48


state 45

   22 aps: aps ';' ap .

    $default  reduce using rule 22 (aps)


state 46

   32 port: PORT .

    $default  reduce using rule 32 (port)


state 47

   33 port: WWPN .

    $default  reduce using rule 33 (port)


state 48

   30 ports: ports port .

    $default  reduce using rule 30 (ports)
